[workspace]
members = [
    'contracts/*',
    'packages/ownable',
    'packages/interface',
    'packages/testutils/*',
    "integration-test",
]
resolver = "2"

[profile.test]
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[workspace.package]
version = "0.0.1"
authors = [
    "byeongsu-hong <hong@byeongsu.dev>",
    "Eric <hashableric@gmail.com>",
    "Steve <steve8060914@gmail.com>",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/many-things/cw-hyperlane"
homepage = "https://www.hyperlane.xyz/"
documentation = "https://docs.hyperlane.xyz/"
keywords = ["hyperlane", "cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-std = { version = "1.2.7", features = ["stargate", "cosmwasm_1_2"] }
cosmwasm-storage = "1.2.7"
schemars = "0.8.12"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.0.0"
sha3 = "0.10.8"
sha2 = { version = "0.10.6", default-features = false }
ripemd = "0.1.3"
bech32 = "0.9.1"
base64 = "0.21.2"
serde = "1.0.162"
serde_json = "1.0.96"
serde-json-wasm = "0.5.1"
thiserror = { version = "1.0.37" }
cw-multi-test = "0.16.5"
cosmwasm-schema = "1.2.7"

anyhow = { version = "1.0.71" }
k256 = { version = "0.13.1", features = ["std", "ecdsa"] }
hex-literal = { version = "0.4.1" }
osmosis-test-tube = { version = "16.0.0" }

tokio = { version = "1", features = ["full"] }
eyre = { version = "0.6.8" }
ethers = "2.0.7"

hpl-ownable = { path = "./packages/ownable" }
hpl-interface = { path = "./packages/interface" }
hpl-hub = { path = "./contracts/hub" }
hpl-ism-multisig = { path = "./contracts/ism-multisig" }
hpl-mailbox = { path = "./contracts/mailbox" }
hpl-multicall = { path = "./contracts/multicall" }
