[workspace]
members = [
    "contracts/core/*",
    "contracts/hooks/*",
    "contracts/igps/*",
    "contracts/isms/*",
    "contracts/mocks/*",
    "contracts/warp/*",
    "packages/*",
    "integration-test",
]
resolver = "2"

[profile.test]
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false

[workspace.package]
version = "0.0.6-rc6"
authors = [
    "byeongsu-hong <hong@byeongsu.dev>",
    "Eric <hashableric@gmail.com>",
    "Steve <steve8060914@gmail.com>",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/many-things/cw-hyperlane"
homepage = "https://www.hyperlane.xyz/"
documentation = "https://docs.hyperlane.xyz/"
keywords = ["hyperlane", "cosmos", "cosmwasm"]

[workspace.dependencies]
# cosmwasm
cosmwasm-std = { version = "1.5.0", features = ["stargate", "cosmwasm_1_1"] }
cosmwasm-storage = "1.5.0"
cosmwasm-schema = "1.5.0"
cosmwasm-crypto = "1.5.0"

# cosmwasm extension
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = { version = "1.1.2", features = ["library"] }

# utilities
thiserror = { version = "1.0.37" }
anyhow = { version = "1.0.71", features = ["backtrace"] }
eyre = { version = "0.6.8" }

# encoding
bech32 = "0.9.1"
base64 = "0.21.2"
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
serde-json-wasm = "1.0.0"
schemars = "0.8.12"
prost = { version = "0.12.1", default-features = false, features = [
    "prost-derive",
] }
prost-types = { version = "0.12.1", default-features = false }
hex-literal = { version = "0.4.1" }

# cryptography
sha3 = "0.10.8"
sha2 = { version = "0.10.6", default-features = false }
ripemd = "0.1.3"
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }
digest = { version = "0.10.7" }

# testing
cw-multi-test = "0.20.0"
rstest = "0.18.2"
test-tube = { version = "0.5.0" }
osmosis-test-tube = { version = "22.1.0" }
ibcx-test-utils = { version = "0.1.2" }

tokio = { version = "1", features = ["full"] }
ethers = "2.0.7"

# workspace aliases (./contracts)
hpl-mailbox = { path = "./contracts/core/mailbox" }
hpl-validator-announce = { path = "./contracts/core/va" }

hpl-hook-merkle = { path = "./contracts/hooks/merkle" }
hpl-hook-fee = { path = "./contracts/hooks/fee" }
hpl-hook-pausable = { path = "./contracts/hooks/pausable" }
hpl-hook-routing = { path = "./contracts/hooks/routing" }
hpl-hook-routing-custom = { path = "./contracts/hooks/routing-custom" }
hpl-hook-routing-fallback = { path = "./contracts/hooks/routing-fallback" }

hpl-igp = { path = "./contracts/igps/core" }
hpl-igp-oracle = { path = "./contracts/igps/oracle" }

hpl-ism-multisig = { path = "./contracts/isms/multisig" }
hpl-ism-routing = { path = "./contracts/isms/routing" }

hpl-warp-cw20 = { path = "./contracts/warp/cw20" }
hpl-warp-native = { path = "./contracts/warp/native" }

# workspace aliases (./packages)
hpl-connection = { path = "./packages/connection" }
hpl-ownable = { path = "./packages/ownable" }
hpl-pausable = { path = "./packages/pausable" }
hpl-router = { path = "./packages/router" }
hpl-interface = { path = "./packages/interface" }
