[package]
name = "hpl-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }

[dev_dependencies]
ethers = { workspace = true }
test-tube = { workspace = true }
osmosis-test-tube = { workspace = true }
serde_json = { workspace = true }
serde-json-wasm = { workspace = true }
cosmwasm-schema = { workspace = true }
base64 = { workspace = true }
bech32 = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ripemd = { workspace = true }
hex-literal = { workspace = true }

hpl-ism-multisig = { workspace = true }
hpl-interface = { workspace = true }

[build-dependencies]
ethers = { workspace = true }
