[package]
name = "hpl-igp-oracle"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cosmwasm-schema.workspace = true

cw-storage-plus.workspace = true
cw2.workspace = true

schemars.workspace = true

thiserror.workspace = true

hpl-utils.workspace = true
hpl-ownable.workspace = true
hpl-interface.workspace = true

[dev-dependencies]
serde.workspace = true

cw-multi-test.workspace = true

anyhow.workspace = true
