[package]
name = "hpl-warp-cw20"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cosmwasm-schema.workspace = true

cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true

sha2.workspace = true
ripemd.workspace = true

serde.workspace = true
bech32.workspace = true
schemars.workspace = true

thiserror.workspace = true

hpl-utils.workspace = true
hpl-connection.workspace = true
hpl-ownable.workspace = true
hpl-router.workspace = true
hpl-interface.workspace = true

[dev-dependencies]
serde-json-wasm.workspace = true

osmosis-test-tube.workspace = true
ibcx-test-utils.workspace = true
rstest.workspace = true
anyhow.workspace = true
k256.workspace = true
sha3.workspace = true
